[package]
name = "vivo-lockscreen-packing"
version = "0.1.2"
edition = "2024"

[[bin]]
name = "vlp"
path = "src/main.rs"

[dependencies]
chrono = "0.4.41"
clap = { version = "4.5.41", features = ["derive"] }
console = "0.16.0"
fs_extra = "1.3.0"
indicatif = "0.18.0"
rand = "0.9.1"
tempfile = "3.20.0"
walkdir = "2.5.0"
which = "8.0.0"

[target.'cfg(windows)'.dependencies]
winreg = "0.55.0"
